# ToolFlow

./: CMakeLists.txt  README.md  createTool.sh  createToolChain.sh
shared/include/: Event.h  EventReader.h  PMTHit.h
shared/src/: Event.cc  EventReader.cc  PMTHit.cc
toolChains/: toolChainRegistry.txt
toolChains/toolChain1/: tool4.ini  toolChain1.tchain  tools.list
tools/: toolRegistry.txt
tools/runPipeline/: CMakeLists.txt  main.cpp
tools/tool1/: CMakeLists.txt  config.ini  main.cpp
tools/tool2/: CMakeLists.txt  README.md  config.ini  main.cpp
tools/tool2/include/: GaussianHistogram.h
tools/tool2/src/: GaussianHistogram.cpp
tools/tool3/: CMakeLists.txt  config.ini  main.cpp
tools/tool4/: CMakeLists.txt  README.md  main.cpp
tools/tool5/: CMakeLists.txt  README.md  config.ini  main.cpp
